--- a/front/src/index.css
+++ b/front/src/index.css
@@ -4,3 +4,9 @@
 *{
     box-sizing: border-box;
 }
+.flex-center {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
